# gs1emu

./: CMakeLists.txt  GS1_specs.txt  Presets.txt  fm_module.txt
dx7_sysex/: PIANO_A1.SYX  YAMAHA GS1.SYX
editor/: CMakeLists.txt
editor/src/: audio_engine.cpp  audio_engine.h  curve_generator.cpp  curve_generator.h  main.cpp  sysex.cpp  sysex.h  tui.cpp  tui.h
emulator/: CMakeLists.txt
emulator/src/: delayline.cpp  delayline.h  gs1_presets Kopie.h  gs1_presets.h  gs1emu Kopie.cpp  gs1emu.cpp  gs1emu.h  patch_test.h  patchdata Kopie.h  patchdata.h
test/: standalone.cpp  test.cpp
